--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,98 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background: linear-gradient(135deg, #667eea, #764ba2);
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+.app-container {
+  width: 100%o;
+  max-width: 1000px;
+  padding: 40px 20px;
+}
+
+header {
+  background: linear-gradient(135deg, #000000, #6366f1);
+  color: white;
+  padding: 30px;
+  border-radius: 18px;
   text-align: center;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.description {
+  margin: 25px auto 40px;
+  max-width: 800px;
+  text-align: center;
+  font-size: 16px;
+  color: #ffc505;
+  line-height: 1.6;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.user-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
 }
 
 .card {
-  padding: 2em;
+  background: rgb(0, 0, 0);
+  width: 90%;
+  max-width: 800px;
+  padding: 25px 30px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease;
 }
 
-.read-the-docs {
-  color: #888;
+.card:hover {
+  transform: translateY(-6px);
+}
+
+.card-content {
+  text-align: left;
+  max-width: 70%;
+}
+
+.card-content h3 {
+  margin: 0;
+  font-size: 22px;
+  color: #ffffff;
+}
+
+.role {
+  display: inline-block;
+  margin: 8px 0;
+  padding: 6px 14px;
+  font-size: 13px;
+  border-radius: 20px;
+  background: linear-gradient(135deg, #46e5bd, #6366f1);
+  color: white;
+}
+
+.email {
+  font-size: 14px;
+  color: #ff9e9e;
+  margin: 5px 0;
+}
+
+.card-content p {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #ff9785;
+  line-height: 1.5;
+}
+
+.profile-pic img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid #6366f1;
 }
